@@ -7,7 +7,6 @@ import com.tfg.apirest.entity.Farmaco;
 import org.springframework.cglib.core.internal.Function;
 
 import java.util.ArrayList;
-import java.util.stream.Collectors;
 
 
 public class FarmacoToFarmacoDetalleViewFunction implements Function<Farmaco, FarmacoDetalleView> {
@@ -28,15 +27,16 @@ public class FarmacoToFarmacoDetalleViewFunction implements Function<Farmaco, Fa
 
         // Propiedad dosis máxima
         var propiedadDosisMaxima = f.getPropiedades().stream().filter( p -> //
-                DOS_MAX.equals(p.getPropiedad().getCodigo())).findFirst();
+                DOS_MAX.equals(p.getTipoPropiedad().getCodigo())).findFirst();
         propiedadDosisMaxima.ifPresent(dm -> propiedades.setDosisMaxima(PropiedadView.builder()//
-                .unidad(dm.getId().getUnidad()) //
-                .valor(dm.getId().getValor()) //
-                .build()));
+                                                                        .unidad(dm.getId().getUnidad()) //
+                                                                        .valor(dm.getId().getValor()) //
+                                                                        .build()));
 
         // Propiedades Presentación comercial
         var propiedadesPresentacion = new ArrayList<PropiedadView>();
-        var presentaciones = f.getPropiedades().stream().filter( p -> PRE.equals(p.getPropiedad().getCodigo())).collect(Collectors.toList());
+        var presentaciones = f.getPropiedades().stream().filter( p -> //
+                PRE.equals(p.getTipoPropiedad().getCodigo())).toList();
         presentaciones.forEach( pre -> propiedadesPresentacion.add( PropiedadView.builder()//
                                                                      .unidad(pre.getId().getUnidad()) //
                                                                      .valor(pre.getId().getValor()) //
@@ -46,10 +46,11 @@ public class FarmacoToFarmacoDetalleViewFunction implements Function<Farmaco, Fa
 
         // Propiedades Concentración
         var propiedadesConcentracion = new ArrayList<PropiedadView>();
-        var concentraciones = f.getPropiedades().stream().filter( p -> CON.equals(p.getPropiedad().getCodigo())).collect(Collectors.toList());
-        concentraciones.forEach( pre -> propiedadesConcentracion.add( PropiedadView.builder()//
-                                                                        .unidad(pre.getId().getUnidad()) //
-                                                                        .valor(pre.getId().getValor()) //
+        var concentraciones = f.getPropiedades().stream().filter( p -> //
+                CON.equals(p.getTipoPropiedad().getCodigo())).toList();
+        concentraciones.forEach( con -> propiedadesConcentracion.add( PropiedadView.builder()//
+                                                                        .unidad(con.getId().getUnidad()) //
+                                                                        .valor(con.getId().getValor()) //
                                                                         .build()));
         if (!propiedadesConcentracion.isEmpty())
             propiedades.setPresentaciones(propiedadesConcentracion);
